--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "mongoose": "3.8.*"
   },
   "dependencies": {
-    "lodash": "^2.4.1",
-    "mongoose": "^3.8.14"
+    "lodash": "^2.4.1"
   },
   "devDependencies": {
     "mocha": "^1.21.3",
+    "mongoose": "^3.8.14",
     "should": "^4.0.4"
   }
 }
